Fix some spacing

--- a/static/style.css
+++ b/static/style.css
@@ -19,29 +19,34 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  max-height: 10vh;
   font-family: 'PantographSans-Regular', sans-serif;
+  font-size: 1.5em;
   text-align: center;
   color: #ffffff;
   text-shadow: none;
-  font-size: 1.5em;
   flex-wrap: wrap;
-  padding-bottom: 2em;
+  border-bottom: 1px solid white;
+  margin-bottom: 2em;
+}
+
+#header img {
+  max-height: 10vh;
 }
 
 #clock {
   min-width: 8%;
 }
 
-#header hr {
-  min-width: 100%;
+#table-wrapper {
+  display: flex;
+  align-items: center;
+  align-content: center;
 }
 
 #timetable {
   font-size: 4em;
   width : 100%;
   line-height: 1.5em;
-  table-layout: fixed;
 }
 
 .destination {
